--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "alertifyjs": "^1.10.0",
+    "angular-2-dropdown-multiselect": "^1.3.2",
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
@@ -29,6 +30,8 @@
     "font-awesome": "^4.7.0",
     "gentelella": "^1.3.0",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
+    "ng2-daterangepicker": "^2.0.7",
     "ngx-bootstrap": "^1.7.1",
     "nprogress": "^0.2.0",
     "rxjs": "^5.1.0",
